# komekshi-tg-bot

./: currency-converter-bot.py  first.sql  main.py  pyproject.toml  run.py  tg-weather-bot.py
