[project]
name = "komekshi-tg-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Abzal",email = "k4bdoldaev@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "pytelegrambotapi (>=4.27.0,<5.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
